--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,18 @@ services:
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db && 
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     environment:
-      - DB_HOST=db
-      - DB_NAME=devdb
-      - DB_USER=devuser
-      - DB_PASS=changeme
+      # - DB_HOST=db
+      # - DB_NAME=devdb
+      # - DB_USER=devuser
+      # - DB_PASS=changeme
+      - DB_HOST=localhost
+      - DB_NAME=fastapi
+      - DB_USER=postgres
+      - DB_PASS=admin
     depends_on:
       - db
 
@@ -25,9 +31,12 @@ services:
     volumes:
       - dev-db-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_BD=devdb
-      - POSTGRES_USER=devuser
-      - POSTGRES_PASSWORD=changeme
+      # - POSTGRES_DB=devdb
+      # - POSTGRES_USER=devuser
+      # - POSTGRES_PASSWORD=changeme
+      - POSTGRES_DB=fastapi
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=admin
     
 volumes:
   dev-db-data:
