--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
              python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
-      - DB_NAME=devdb
+      - DB_NAME=recipe-app-api_dev-db-data
       - DB_USER=devuser
       - DB_PASS=changeme
     depends_on:
@@ -27,9 +27,11 @@ services:
     volumes:
       - dev-db-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=devdb
+      - POSTGRES_DB=recipe-app-api_dev-db-data
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=changeme
-    
+    ports:
+      - 5432:5432
 volumes:
   dev-db-data:
+
